--- a/public/index.html
+++ b/public/index.html
@@ -73,13 +73,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                    <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 location_icon_bottum_parent">
                         <div class="location_icon_bottum_tt">
                             <ul>
-                                <li><img src="icon/loc1.png" />Location</li>
-                                <li><img src="icon/email1.png" />demo@gmail.com</li>
-
-                                <li><img src="icon/call1.png" />(+71)9876543109</li>
+                                <li><img src="icon/email1.png" />servicios@losvalencia.com</li>
+                                <li><img src="icon/call1.png" />(+57) 310 656 6037</li>
                             </ul>
                         </div>
                     </div>
@@ -92,23 +90,15 @@
                                     <div class="limit-box">
                                         <nav class="main-menu">
                                             <ul class="menu-area-main">
-                                                <li class="active"> <a href="index.html">Home</a> </li>
-                                                <li> <a href="#about">About</a> </li>
-                                                <li><a href="#product">Products</a></li>
-                                                <li><a href="#testimonial">Testimonial</a></li>
-                                                <li><a href="#contact">Contact Us</a></li>
-
+                                                <li><a href="#about">Acerca</a> </li>
+                                                <li><a href="#product">Servicios</a></li>
+                                                <li><a href="#testimonial">Testimonios</a></li>
+                                                <li><a href="#contact">Contactanos</a></li>
                                             </ul>
                                         </nav>
                                     </div>
                                 </div>
 
-                            </div>
-                            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-                                <form class="search">
-                                    <input class="form-control" type="text" placeholder="Search">
-                                    <button><img src="images/search_icon.png"></button>
-                                </form>
                             </div>
                        </div>
                     </div>
@@ -119,49 +109,17 @@
     </header>
     <!-- end header -->
     <section class="slider_section">
-        <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
-            <ul class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-            </ul>
+        <div class="carousel slide banner-main">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="images/banner.jpg" alt="First slide">
-                    <div class="container">
-                        <div class="carousel-caption relative">
-                            <h1>Moon</h1>
-                            <span>FARMING COMPANY</span>
-
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
-                            <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="second-slide" src="images/banner.jpg" alt="Second slide">
-                    <div class="container">
-                        <div class="carousel-caption relative">
-                            <h1>Moon</h1>
-                            <span>FARMING COMPANY</span>
-
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
-                            <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="third-slide" src="images/banner.jpg" alt="Third slide">
-                    <div class="container">
-                        <div class="carousel-caption relative">
-                            <h1>Moon</h1>
-                            <span>FARMING COMPANY</span>
-
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
-                            <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
-
+                        <img class="first-slide" src="images/banner.jpg" alt="First slide">
+                        <div class="container">
+                            <div class="carousel-caption relative">
+                                <h1>Los Valencia</h1>
+                                <span>PRADOS Y JARDINES</span>
+                                <p>Nuestra misión es entregar un trabajo de calidad a nuestros clientes el cual, brindando una excelente atención en nuestros servicios </p>
+                                <a class="buynow" href="#about">Sobre Nosotros</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -460,45 +418,6 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid padddd">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 padddd">
-            <div class="map_section">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-
-                            <form class="main_form">
-                                <div class="row">
-
-                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <input class="form-control" placeholder="Name" type="text" name="Name">
-                                    </div>
-                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <input class="form-control" placeholder="Email" type="text" name="Email">
-                                    </div>
-                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <input class="form-control" placeholder="Phone" type="text" name="Phone">
-                                    </div>
-                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
-                                    </div>
-                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <button class="send">Send</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div id="map">
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-   
-    <!-- end contact -->
 
     <!-- footer -->
     <!--  footer -->
@@ -515,50 +434,25 @@
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                         <div class="address">
-                            <h3>Quick links</h3>
-                            <ul class="Links_footer">
-                                <li><img src="icon/3.png" alt="#" /> <a href="#"> Join Us</a> </li>
-                                <li><img src="icon/3.png" alt="#" /> <a href="#">Maintenance</a> </li>
-                                <li><img src="icon/3.png" alt="#" /> <a href="#">Language Packs</a> </li>
-                                <li><img src="icon/3.png" alt="#" /> <a href="#">LearnPress</a> </li>
-                                <li><img src="icon/3.png" alt="#" /> <a href="#">Release Status</a> </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
-                        <div class="address">
-                            <h3>Subcribe email</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
-                            <input class="form-control" placeholder="Your Email" type="type" name="Your Email">
-                            <button class="submit-btn">Submit</button>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
-                        <div class="address">
                             <h3>Contact Us</h3>
 
                             <ul class="loca">
                                 <li>
-                                    <a href="#"><img src="icon/loc.png" alt="#" /></a>London 145
-                                    <br>United Kingdom </li>
-                                <li>
-                                    <a href="#"><img src="icon/email.png" alt="#" /></a>demo@gmail.com </li>
-                                <li>
-                                    <a href="#"><img src="icon/call.png" alt="#" /></a>+12586954775 </li>
+                                    <a href="#"><img src="icon/loc.png" alt="#" /></a>La Ceja
+                                    <br>Antioquia
+                                </li>
+                                <li> <a href="#"><img src="icon/email.png" alt="#" /></a>servicios@losvalencia.com </li>
+                                <li> <a href="#"><img src="icon/call.png" alt="#" /></a>3106566037 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-     
         <div class="copyright">
             <div class="container">
-                <p>© 2019 All Rights Reserved. Design By<a href="https://html.design/"> Free Html Templates</a></p>
-           
-        </div>
+                <p>© 2021 Todos los derechos reservados</p>
+            </div>
         </div>
     </footr>
 
