--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Los Valencia</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.9.1/firebase-app.js"></script>
@@ -30,10 +30,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>moon firm</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
+      <meta name="keywords" content="Jardines Zonas Comunes prados mantenimiento cuidado">
+      <meta name="description" content="Mantenimiento y cuidado de prados y jardines">
+      <meta name="author" content="Los Valencia">
       <!-- bootstrap css -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- style css -->
@@ -426,15 +425,15 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="address">
                             <a href="index.html"> <img src="images/logo.png" alt="logo" /></a>
                             <p>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et sdolor sit amet, consectetur adipiscing elit, </p>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center" >
                         <div class="address">
-                            <h3>Contact Us</h3>
+                            <h3>Contactanos</h3>
 
                             <ul class="loca">
                                 <li>
