--- a/public/index.html
+++ b/public/index.html
@@ -115,19 +115,13 @@
                             <div class="carousel-caption relative">
                                 <h1>Los Valencia</h1>
                                 <span>PRADOS Y JARDINES</span>
-                                <p>Nuestra misión es entregar un trabajo de calidad a nuestros clientes el cual, brindando una excelente atención en nuestros servicios </p>
+                                <p>Nuestra misión es entregar un trabajo de calidad a nuestros clientes, brindando una excelente atención en nuestros servicios </p>
                                 <a class="buynow" href="#about">Sobre Nosotros</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <i class='fa fa-angle-left'></i>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <i class='fa fa-angle-right'></i>
-            </a>
         </div>
     </section>
 
