--- a/public/index.html
+++ b/public/index.html
@@ -492,7 +492,7 @@
           loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
         } catch (e) {
           console.warn(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+          if(loadEl) loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
         }
       });
     </script>
